# monoglot-nlink

./: .clang-format  CMakeLists.old.txt  CMakeLists.txt  Makefile.linux  Makefile.windows  README.md  README2.md  schema.xml  setup.ps1
.bak/: CMakeLists.old.txt
cmake/: NexusLinkConfig.cmake.in
reports/includes/: invalid_includes_20250420_175336.md
src/cli/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/common/: CMakeLists.txt
tests/: CMakeLists.txt
tools/: format.sh
